--- a/ProyectoIntegradorArgProg_SenecaGabriel/angular.json
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/angular.json
@@ -27,9 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "ProyectoIntegradorArgProg_SenecaGabriel/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "ProyectoIntegradorArgProg_SenecaGabriel/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
